Bug 184986 - ktorrent crashes on specific .torrents
Summary: ktorrent crashes on specific .torrents
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian stable Linux
: NOR crash
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 185234 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-02-20 01:19 UTC by Lukas Fisch
Modified: 2009-03-18 15:16 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Lukas Fisch 2009-02-20 01:19:01 UTC
Version:           3.1.4+dfsg.1-1 (using KDE 3.5.9)
OS:                Linux
Installed from:    Debian stable Packages

Hi,

by downloading [1] ktorrent crashes either while downloading or while overloading ( it's more downloaded than the filesize ). 
There is no way to finish the download correctly. Can anyone confirm this issue?

If there is a problem with the .torrent ktorrent should not crash anyway.

Maybe this problem is already fixed, but not on Debian Lenny. 
Advises are welcome on [2].

Greets,

Lukas


[1] http://downloads.archlinux.de/iso/2009.02/archlinux-2009.02-ftp-x86_64.iso.torrent

[2] http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=515899

Backtrace:

Application: KTorrent (ktorrent), signal SIGSEGV
[Thread debugging using libthread_db enabled]
[New Thread 0x7feb3c7576f0 (LWP 13413)]
[New Thread 0x446d8950 (LWP 13469)]
[New Thread 0x43ed7950 (LWP 13468)]
[KCrash handler]
#5  0x00007feb38dcc00b in memcpy () from /lib/libc.so.6
#6  0x00007feb3bc907ed in bt::WebSeed::handleData (this=0x2756d60, 
    tmp=@0x7fff448885a0)
    at /tmp/buildd/ktorrent-3.1.4+dfsg.1/libbtcore/download/webseed.cpp:308
#7  0x00007feb3bc91463 in bt::WebSeed::update (this=0x2756d60)
    at /tmp/buildd/ktorrent-3.1.4+dfsg.1/libbtcore/download/webseed.cpp:274
#8  0x00007feb3bc980b0 in bt::Downloader::update (this=0x2741860)
    at /tmp/buildd/ktorrent-3.1.4+dfsg.1/libbtcore/download/downloader.cpp:180
#9  0x00007feb3bcbbb93 in bt::TorrentControl::update (this=0x28fa660)
    at /tmp/buildd/ktorrent-3.1.4+dfsg.1/libbtcore/torrent/torrentcontrol.cpp:200
#10 0x0000000000429bda in kt::Core::update (this=0x1ddddb0)
    at /tmp/buildd/ktorrent-3.1.4+dfsg.1/ktorrent/core.cpp:798
#11 0x00000000004302b6 in kt::Core::qt_metacall (this=0x1ddddb0, 
    _c=QMetaObject::InvokeMetaMethod, _id=713318400, _a=0x7fff44888840)
    at /tmp/buildd/ktorrent-3.1.4+dfsg.1/obj-x86_64-linux-gnu/ktorrent/core.moc:145
#12 0x00007feb39cb76d4 in QMetaObject::activate (sender=0x1ddddd8, 
    from_signal_index=<value optimized out>, to_signal_index=4, argv=0x84)
    at kernel/qobject.cpp:3031
#13 0x00007feb39cb1fe3 in QObject::event (this=0x1ddddd8, e=0x7feb2405cfd8)
    at kernel/qobject.cpp:1120
#14 0x00007feb3a85ea5d in QApplicationPrivate::notify_helper (this=0x1b9ccc0, 
    receiver=0x1ddddd8, e=0x7fff44888ef0) at kernel/qapplication.cpp:3803
#15 0x00007feb3a8667da in QApplication::notify (this=0x7fff44889240, 
    receiver=0x1ddddd8, e=0x7fff44888ef0) at kernel/qapplication.cpp:3768
#16 0x00007feb3b857c0b in KApplication::notify (this=0x7fff44889240, 
    receiver=0x1ddddd8, event=0x7fff44888ef0)
    at /build/buildd/kde4libs-4.1.0/kdeui/kernel/kapplication.cpp:311
#17 0x00007feb39ca3381 in QCoreApplication::notifyInternal (
    this=0x7fff44889240, receiver=0x1ddddd8, event=0x7fff44888ef0)
    at kernel/qcoreapplication.cpp:587
#18 0x00007feb39ccf256 in QTimerInfoList::activateTimers (this=0x1ba04f0)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:209
#19 0x00007feb39ccb7ad in timerSourceDispatch (source=<value optimized out>)
    at kernel/qeventdispatcher_glib.cpp:160
#20 0x00007feb35e0a78b in g_main_context_dispatch ()
   from /usr/lib/libglib-2.0.so.0
#21 0x00007feb35e0df5d in ?? () from /usr/lib/libglib-2.0.so.0
#22 0x00007feb35e0e11b in g_main_context_iteration ()
   from /usr/lib/libglib-2.0.so.0
#23 0x00007feb39ccb70f in QEventDispatcherGlib::processEvents (this=0x1b9ced0, 
    flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:319
#24 0x00007feb3a8f044f in QGuiEventDispatcherGlib::processEvents (
    this=0x7feb2a846000, flags=<value optimized out>)
    at kernel/qguieventdispatcher_glib.cpp:198
#25 0x00007feb39ca1ca2 in QEventLoop::processEvents (
    this=<value optimized out>, flags={i = 1149800800})
    at kernel/qeventloop.cpp:143
#26 0x00007feb39ca1e2d in QEventLoop::exec (this=0x7fff448891a0, flags=
      {i = 1149800880}) at kernel/qeventloop.cpp:194
#27 0x00007feb39ca42dd in QCoreApplication::exec ()
    at kernel/qcoreapplication.cpp:845
#28 0x00000000004230fb in main (argc=1, argv=0x7fff44889e58)
    at /tmp/buildd/ktorrent-3.1.4+dfsg.1/ktorrent/main.cpp:166
#0  0x00007feb38decff1 in nanosleep () from /lib/libc.so.6
Comment 1 Dario Andres 2009-02-20 23:57:36 UTC
I couldn't find related duplicate for this crash. But, it may be fixed in the current version (3.1.6 or 3.2devel)
Comment 2 Joris Guisson 2009-02-21 16:26:49 UTC
I'm getting a different crash with this torrent, but it is probably related.
Comment 3 Joris Guisson 2009-02-23 08:05:10 UTC
*** Bug 185234 has been marked as a duplicate of this bug. ***
Comment 4 Joris Guisson 2009-03-18 12:53:22 UTC
SVN commit 940839 by guisson:

Finish improving webseeding code, should also fix a crash

BUG: 184986

 M  +2 -0      ChangeLog  
 M  +35 -7     libbtcore/download/downloader.cpp  
 M  +1 -0      libbtcore/download/downloader.h  
 M  +12 -24    libbtcore/download/webseed.cpp  
 M  +5 -6      libbtcore/download/webseed.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=940839
Comment 5 Lukas Fisch 2009-03-18 15:16:53 UTC
Thanks for that.
Forwarded it to Debian-Bug-List.

Cheers