Finish improving webseeding code, should also fix a crash

BUG: 184986

svn path=/trunk/extragear/network/ktorrent/; revision=940839